code style: use .remove/get First/Last ()